added responsive sizing from <480 to >1201 px width

--- a/HomePage/carousel.html
+++ b/HomePage/carousel.html
@@ -229,6 +229,388 @@
             color: black;
             font-size: 20px;
         }
+
+        /* Responsive Design */
+        /* Extra Small (phones) ≤ 480px */
+        @media (max-width: 480px) {
+            body {
+                padding: 10px;
+            }
+
+            .carousel-container {
+                max-width: 100%;
+                margin: 0;
+            }
+
+            .carousel {
+                height: 250px;
+            }
+
+            .event {
+                padding: 10px 15px 50px 15px;
+                font-size: 12px;
+                min-height: 180px;
+            }
+
+            .event-title {
+                font-size: 18px;
+                margin-left: -5px;
+                margin-right: -5px;
+                margin-bottom: 8px;
+            }
+
+            .event-details {
+                font-size: 13px;
+                margin-bottom: 8px;
+            }
+
+            .event a {
+                font-size: 14px;
+                margin-top: 8px;
+            }
+
+            .carousel-control {
+                width: 35px;
+                height: 35px;
+                font-size: 14px;
+            }
+
+            .carousel-control-prev {
+                left: 8px;
+            }
+
+            .carousel-control-next {
+                right: 8px;
+            }
+
+            .carousel-indicator {
+                width: 8px;
+                height: 8px;
+            }
+
+            .carousel-indicators {
+                bottom: 8px;
+                gap: 6px;
+            }
+
+            .carousel-caption h3 {
+                font-size: 1rem;
+            }
+
+            .carousel-caption p {
+                font-size: 0.8rem;
+            }
+
+            .carousel-paused {
+                top: 8px;
+                right: 8px;
+                font-size: 10px;
+                padding: 3px 6px;
+            }
+        }
+
+        /* Small (phones/tablets) ≤ 600px */
+        @media (max-width: 600px) {
+            body {
+                padding: 15px;
+            }
+
+            .carousel-container {
+                max-width: 100%;
+            }
+
+            .carousel {
+                height: 280px;
+            }
+
+            .event {
+                padding: 15px 25px 55px 25px;
+                font-size: 13px;
+                min-height: 190px;
+            }
+
+            .event-title {
+                font-size: 22px;
+                margin-left: -15px;
+                margin-right: -15px;
+                margin-bottom: 8px;
+            }
+
+            .event-details {
+                font-size: 15px;
+                margin-bottom: 10px;
+            }
+
+            .event a {
+                font-size: 16px;
+                margin-top: 8px;
+            }
+
+            .carousel-control {
+                width: 40px;
+                height: 40px;
+                font-size: 16px;
+            }
+
+            .carousel-control-prev {
+                left: 10px;
+            }
+
+            .carousel-control-next {
+                right: 10px;
+            }
+
+            .carousel-indicator {
+                width: 10px;
+                height: 10px;
+            }
+
+            .carousel-indicators {
+                bottom: 10px;
+                gap: 8px;
+            }
+
+            .carousel-caption h3 {
+                font-size: 1.2rem;
+            }
+
+            .carousel-caption p {
+                font-size: 0.9rem;
+            }
+
+            .carousel-paused {
+                top: 10px;
+                right: 10px;
+                font-size: 11px;
+                padding: 4px 8px;
+            }
+        }
+
+        /* Medium (tablets) 601px–900px */
+        @media (min-width: 601px) and (max-width: 900px) {
+            body {
+                padding: 20px;
+            }
+
+            .carousel-container {
+                max-width: 700px;
+            }
+
+            .carousel {
+                height: 320px;
+            }
+
+            .event {
+                padding: 20px 50px 60px 50px;
+                font-size: 14px;
+                min-height: 200px;
+            }
+
+            .event-title {
+                font-size: 28px;
+                margin-left: -40px;
+                margin-right: -40px;
+                margin-bottom: 10px;
+            }
+
+            .event-details {
+                font-size: 16px;
+                margin-bottom: 12px;
+            }
+
+            .event a {
+                font-size: 18px;
+                margin-top: 10px;
+            }
+
+            .carousel-control {
+                width: 45px;
+                height: 45px;
+                font-size: 17px;
+            }
+
+            .carousel-control-prev {
+                left: 12px;
+            }
+
+            .carousel-control-next {
+                right: 12px;
+            }
+
+            .carousel-indicator {
+                width: 11px;
+                height: 11px;
+            }
+
+            .carousel-indicators {
+                bottom: 12px;
+                gap: 9px;
+            }
+
+            .carousel-caption h3 {
+                font-size: 1.3rem;
+            }
+
+            .carousel-caption p {
+                font-size: 0.95rem;
+            }
+
+            .carousel-paused {
+                top: 12px;
+                right: 12px;
+                font-size: 11px;
+            }
+        }
+
+        /* Large (laptops) 901px–1200px */
+        @media (min-width: 901px) and (max-width: 1200px) {
+            body {
+                padding: 20px;
+            }
+
+            .carousel-container {
+                max-width: 750px;
+            }
+
+            .carousel {
+                height: 300px;
+            }
+
+            .event {
+                padding: 15px 70px 60px 70px;
+                font-size: 14px;
+                min-height: 200px;
+            }
+
+            .event-title {
+                font-size: 31px;
+                margin-left: -60px;
+                margin-right: -60px;
+                margin-bottom: 10px;
+            }
+
+            .event-details {
+                font-size: 17px;
+            }
+
+            .event a {
+                font-size: 19px;
+                margin-top: 10px;
+            }
+
+            .carousel-control {
+                width: 48px;
+                height: 48px;
+                font-size: 17px;
+            }
+
+            .carousel-control-prev {
+                left: 14px;
+            }
+
+            .carousel-control-next {
+                right: 14px;
+            }
+
+            .carousel-indicator {
+                width: 12px;
+                height: 12px;
+            }
+
+            .carousel-indicators {
+                bottom: 14px;
+                gap: 10px;
+            }
+
+            .carousel-caption h3 {
+                font-size: 1.4rem;
+            }
+
+            .carousel-caption p {
+                font-size: 0.98rem;
+            }
+
+            .carousel-paused {
+                top: 14px;
+                right: 14px;
+                font-size: 12px;
+            }
+        }
+
+        /* Extra Large (desktops) ≥ 1201px */
+        @media (min-width: 1201px) {
+            body {
+                padding: 20px;
+            }
+
+            .carousel-container {
+                max-width: 800px;
+            }
+
+            .carousel {
+                height: 300px;
+            }
+
+            .event {
+                padding: 15px 80px 60px 80px;
+                font-size: 14px;
+                min-height: 200px;
+            }
+
+            .event-title {
+                font-size: 33px;
+                margin-left: -65px;
+                margin-right: -65px;
+                margin-bottom: 10px;
+            }
+
+            .event-details {
+                font-size: 18px;
+            }
+
+            .event a {
+                font-size: 20px;
+                margin-top: 10px;
+            }
+
+            .carousel-control {
+                width: 50px;
+                height: 50px;
+                font-size: 18px;
+            }
+
+            .carousel-control-prev {
+                left: 15px;
+            }
+
+            .carousel-control-next {
+                right: 15px;
+            }
+
+            .carousel-indicator {
+                width: 12px;
+                height: 12px;
+            }
+
+            .carousel-indicators {
+                bottom: 15px;
+                gap: 10px;
+            }
+
+            .carousel-caption h3 {
+                font-size: 1.5rem;
+            }
+
+            .carousel-caption p {
+                font-size: 1rem;
+            }
+
+            .carousel-paused {
+                top: 15px;
+                right: 15px;
+                font-size: 12px;
+            }
+        }
     </style>
 </head>
 
