link open new window

--- a/HomePage/carousel.html
+++ b/HomePage/carousel.html
@@ -722,7 +722,7 @@
                                     <div class="event-title">${slideInfo.title}</div>
                                     <div class="event-details"><strong>When:</strong> ${slideInfo.when}</div>
                                     <div class="event-details"><strong>Where:</strong> ${slideInfo.where}</div>
-                                    <a href="${slideInfo.link}">RSVP HERE</a>
+                                    <a href="${slideInfo.link}" target="_blank" rel="noopener noreferrer">RSVP HERE</a>
                                 </div>
                             `;
 
