testing for phone view

--- a/HomePage/carousel.html
+++ b/HomePage/carousel.html
@@ -243,20 +243,20 @@
             }
 
             .carousel {
-                height: 250px;
+                height: 220px;
             }
 
             .event {
-                padding: 10px 15px 50px 15px;
+                padding: 10px 10px 30px 10px;
                 font-size: 12px;
-                min-height: 180px;
+                min-height: auto;
             }
 
             .event-title {
-                font-size: 18px;
-                margin-left: -5px;
-                margin-right: -5px;
-                margin-bottom: 8px;
+                font-size: 16px;
+                margin-left: 0;
+                margin-right: 0;
+                /* margin-bottom: 8px; */
             }
 
             .event-details {
